--- a/portfolio.html
+++ b/portfolio.html
@@ -27,9 +27,9 @@
         </p>
     </section>
 
-<section id="">
-    <h3> </h3>
-    <p> </p>
+<section id="more about me">
+   <p>I enjoy learning new things, solving problems, and spending time with my girlfriend, Yene. In my free time, I also work on improving my English and exploring creative ideas.</p>
+        <p>My goal is to grow both academically and personally while making meaningful connections along the way!</p>
     <section id="contact">
         <h2>Get In Touch</h2>
         <p>+251110239102</strong></p>
