--- a/portfolio.html
+++ b/portfolio.html
@@ -28,6 +28,7 @@
     </section>
 
 <section id="more about me">
+    <h3> More about me </h3>
    <p>I enjoy learning new things, solving problems, and spending time with my girlfriend, Yene. In my free time, I also work on improving my English and exploring creative ideas.</p>
         <p>My goal is to grow both academically and personally while making meaningful connections along the way!</p>
     <section id="contact">
